@@ -1,1 +1,1 @@
-Для частного пользования
+Для использования в проектах построенных на MODX Revolution
