@@ -1,3 +1,8 @@
+/* MetaTager ver.1.3.0
+---------------------------------------------------------*/
+- Рефакторинг сниппета MetaTager
+- Добавлены сниппеты: CopyDate, GET, parent, title
+
 /* MetaTager ver.1.2.0-beta
 ---------------------------------------------------------*/
 - Добавлена совместимость со Sterc SEOPro
